--- a/index.html
+++ b/index.html
@@ -67,6 +67,18 @@
         </div>
     </div>
 
+    <div id="Services">
+        <div class="container">
+            <h1 class="sub-title">My Services</h1>
+            <div class="services-list">
+                <div>
+                    <h2>OS Design</h2>
+                    <p>I design and build custom operating systems from the ground up, tailored to fit exactly what your hardware or project needs<br>nothing more, nothing less. Whether you're working on embedded devices, real-time systems, or full-featured platforms,<br>I can help you create an OS that’s fast, reliable, and secure.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script>
 
         var tablinks = document.getElementsByClassName("tab-links");
